UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Class_of_service__c.field-meta.xml
<CustomField>
    <fullName>Class_of_service__c</fullName>
    <label>Class of service</label>
    <length>10</length>
    <type>Text</type>
</CustomField>