UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Comboorder_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Comboorder_Enabled__c</fullName>
    <formula>if (vlocity_cmt__Product2Id__r.ProductCode =&quot;ENT_ETH_EIA_0002&quot;,True,if (vlocity_cmt__Product2Id__r.ProductCode =&quot;ENT_ETH_EVPL_0010&quot;,True,False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comboorder_Enabled</label>
    <type>Checkbox</type>
</CustomField>