UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/DPI_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DPI_Enabled__c</fullName>
    <formula>(vlocity_cmt__Product2Id__r.isDPIEnabled__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DPI Enabled</label>
    <type>Checkbox</type>
</CustomField>