UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/DSAT_Ticket__c.field-meta.xml
<CustomField>
    <fullName>DSAT_Ticket__c</fullName>
    <description>Used to capture DSAT Ticket# from Premise</description>
    <label>DSAT Ticket #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>