UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/DSAT_Ticket_No__c.field-meta.xml
<CustomField>
    <fullName>DSAT_Ticket_No__c</fullName>
    <formula>vlocity_cmt__ServiceAccountId__r.vlocity_cmt__PremisesId__r.DSAT_Ticket__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSAT Ticket No</label>
    <type>Text</type>
</CustomField>