UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Fiber_Tier__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Tier__c</fullName>
    <label>Fiber Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>BDT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>