UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Floor_Price_One_Time__c.field-meta.xml
<CustomField>
    <fullName>Floor_Price_One_Time__c</fullName>
    <label>Floor Price (One Time)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>