UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/ftr_EvplHubPER__c.field-meta.xml
<CustomField>
    <fullName>ftr_EvplHubPER__c</fullName>
    <description>This is used to store the attribute value selected for EVPL Hub PER Value.</description>
    <label>EVPL Hub PER Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>