UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/ftr_ExistingRecurringCharge__c.field-meta.xml
<CustomField>
    <fullName>ftr_ExistingRecurringCharge__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Existing Recurring Charge</description>
    <label>Existing Recurring Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>