UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/ftr_HasLocationSibling__c.field-meta.xml
<CustomField>
    <fullName>ftr_HasLocationSibling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Sibling</label>
    <type>Checkbox</type>
</CustomField>