UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/ftr_HBE_Eligible_Text__c.field-meta.xml
<CustomField>
    <fullName>ftr_HBE_Eligible_Text__c</fullName>
    <formula>IF(AND(OR(vlocity_cmt__Product2Id__r.ProductCode = &apos;ENT_ETH_EVPL_0002&apos; , vlocity_cmt__Product2Id__r.ProductCode = &apos;ENT_ETH_EIA_0002&apos;),AND(vlocity_cmt__ServiceAccountId__r.vlocity_cmt__PremisesId__r.ftr_WC_Speed_Mbps__c&gt;5, Speed_Mbps__c &gt; 2 )),&apos;Yes&apos;,&apos;No&apos;)</formula>
    <label>HBE Eligible Text</label>
    <type>Text</type>
</CustomField>