UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/ftr_HBEEligible__c.field-meta.xml
<CustomField>
    <fullName>ftr_HBEEligible__c</fullName>
    <formula>IF(AND(OR(vlocity_cmt__Product2Id__r.ProductCode = &apos;ENT_ETH_EIA_0002&apos; , vlocity_cmt__Product2Id__r.ProductCode  = &apos;ENT_ETH_EVPL_0002&apos; , vlocity_cmt__Product2Id__r.ProductCode  = &apos;ENT_ETH_EVPL_0010&apos; , vlocity_cmt__Product2Id__r.ProductCode  = &apos;ENT_ETH_UNI_0001&apos;),AND(vlocity_cmt__ServiceAccountId__r.vlocity_cmt__PremisesId__r.ftr_WC_Speed_Mbps__c&gt;5)),TRUE,FALSE)</formula>
    <label>HBEEligible</label>
    <type>Checkbox</type>
</CustomField>