UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/ftr_HubSpokePERMismatch__c.field-meta.xml
<CustomField>
    <fullName>ftr_HubSpokePERMismatch__c</fullName>
    <formula>IF( (Product2.ProductCode  = &quot;ENT_ETH_EVPL_0010&quot;) &amp;&amp;  (vlocity_cmt__ServiceAccountId__r.vlocity_cmt__PremisesId__r.ftr_PER_CLLI__c  &lt;&gt; ftr_EvplHubPER__c ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hub_Spoke_PER_Mismatch</label>
    <type>Checkbox</type>
</CustomField>