UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/ftr_IsMultiLocation__c.field-meta.xml
<CustomField>
    <fullName>ftr_IsMultiLocation__c</fullName>
    <formula>IF(Quote.ftr_NumberOfLocations__c &gt; 1, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Multi Location</label>
    <type>Checkbox</type>
</CustomField>