UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/ftr_MRC_Discounted__c.field-meta.xml
<CustomField>
    <fullName>ftr_MRC_Discounted__c</fullName>
    <description>MRC Discounted Percentage</description>
    <formula>MRC_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ftr MRC Discounted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>