UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/ftr_NetNewRecurringCharge__c.field-meta.xml
<CustomField>
    <fullName>ftr_NetNewRecurringCharge__c</fullName>
    <formula>Quantity * (vlocity_cmt__RecurringCharge__c -  ftr_ExistingRecurringCharge__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net New Recurring Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>