UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/ftr_NRC_Discounted__c.field-meta.xml
<CustomField>
    <fullName>ftr_NRC_Discounted__c</fullName>
    <description>NRC Discounted Percent</description>
    <formula>((vlocity_cmt__BaseOneTimeCharge__c - vlocity_cmt__OneTimeCharge__c)/vlocity_cmt__BaseOneTimeCharge__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ftr NRC Discounted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>