UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/ftr_PNLocationsHBEEligible__c.field-meta.xml
<CustomField>
    <fullName>ftr_PNLocationsHBEEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ftr PNLocationsHBEEligible</label>
    <type>Checkbox</type>
</CustomField>