UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/ftr_RollUpWCSpeedMismatch__c.field-meta.xml
<CustomField>
    <fullName>ftr_RollUpWCSpeedMismatch__c</fullName>
    <formula>IF((( Product2.ProductCode = &quot;ENT_ETH_EVPL_0002&quot;) &amp;&amp; ( Speed_Mbps__c &gt; vlocity_cmt__ServiceAccountId__r.vlocity_cmt__PremisesId__r.Max_Speed_Available_Mbps__c )), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roll Up WCSpeed Mismatch</label>
    <type>Checkbox</type>
</CustomField>