UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/ftr_SDWANHubPER__c.field-meta.xml
<CustomField>
    <fullName>ftr_SDWANHubPER__c</fullName>
    <label>ftr SDWANHubPER</label>
    <type>TextArea</type>
</CustomField>