UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/IsSyncing__c.field-meta.xml
<CustomField>
    <fullName>IsSyncing__c</fullName>
    <formula>Quote.IsSyncing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsSyncing</label>
    <type>Checkbox</type>
</CustomField>