UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Juris__c.field-meta.xml
<CustomField>
    <fullName>Juris__c</fullName>
    <label>Jurisdiction</label>
    <length>10</length>
    <type>Text</type>
</CustomField>