UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>