UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Line_Approved_One_Time_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Approved_One_Time_Total__c</fullName>
    <formula>Quantity *  Floor_Price_One_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Approved One Time Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>