UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Line_Approved_Recurring_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Approved_Recurring_Total__c</fullName>
    <formula>Quantity *  Floor_Price_Recurring__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Approved Recurring Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>