UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Line_Requested_Recurring_total__c.field-meta.xml
<CustomField>
    <fullName>Line_Requested_Recurring_total__c</fullName>
    <formula>Quantity* vlocity_cmt__RecurringCharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Requested Recurring total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>