UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Lit__c.field-meta.xml
<CustomField>
    <fullName>Lit__c</fullName>
    <label>Lit?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>