UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Host</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>