UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/MRC_Discount__c.field-meta.xml
<CustomField>
    <fullName>MRC_Discount__c</fullName>
    <formula>IF(vlocity_cmt__BaseRecurringCharge__c &lt;&gt; vlocity_cmt__RecurringCharge__c,((vlocity_cmt__BaseRecurringCharge__c - vlocity_cmt__RecurringCharge__c )/vlocity_cmt__BaseRecurringCharge__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRC Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>