UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Net_New_NRC__c.field-meta.xml
<CustomField>
    <fullName>Net_New_NRC__c</fullName>
    <description>Used to map to the OppLI NRC_Price__c</description>
    <formula>Quantity *  vlocity_cmt__OneTimeCharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net New NRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>