UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Number_of_Quote_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Quote_Line_Items__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Quote Line Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>