UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Opportunity_Sync__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sync__c</fullName>
    <label>Opportunity Sync</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vlocity</fullName>
                <default>true</default>
                <label>Vlocity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>