UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/OTC_Discount__c.field-meta.xml
<CustomField>
    <fullName>OTC_Discount__c</fullName>
    <formula>IF(vlocity_cmt__BaseOneTimeCharge__c &lt;&gt;vlocity_cmt__OneTimeCharge__c,((vlocity_cmt__BaseOneTimeCharge__c -  vlocity_cmt__OneTimeCharge__c)/vlocity_cmt__BaseOneTimeCharge__c), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OTC Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>