UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Premise_Detail__c.field-meta.xml
<CustomField>
    <fullName>Premise_Detail__c</fullName>
    <formula>vlocity_cmt__ServiceAccountId__r.vlocity_cmt__PremisesId__r.Premise_Detail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premise Detail</label>
    <type>Text</type>
</CustomField>