UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Product_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Agreement_Type__c</fullName>
    <description>Agreement Type from Product for CLM</description>
    <formula>TEXT(Product2.Agreement_Type__c)</formula>
    <label>Product Agreement Type</label>
    <type>Text</type>
</CustomField>