UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>TEXT(vlocity_cmt__Product2Id__r.Family)</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>