UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Product_Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Schedule_Type__c</fullName>
    <description>Schedule Type from Product for CLM</description>
    <formula>TEXT(Product2.Schedule_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Schedule Type</label>
    <type>Text</type>
</CustomField>