UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Used to set product type on Order.</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EIA</fullName>
            </value>
            <value>
                <fullName>EVPL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>