UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/RCLimitedExtensionCheck__c.field-meta.xml
<CustomField>
    <fullName>RCLimitedExtensionCheck__c</fullName>
    <description>This field is used on RingCentral Limited Extension validations to check the quantity of devices</description>
    <label>RC Limited Extension Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>