UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Root_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Root_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Root Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>