UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/SF_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>SF_Product_Code__c</fullName>
    <label>SF_Product_Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>