UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/SNE_Code_OTC__c.field-meta.xml
<CustomField>
    <fullName>SNE_Code_OTC__c</fullName>
    <label>S&amp;E Code (OTC)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>