UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/SNE_Code_Term__c.field-meta.xml
<CustomField>
    <fullName>SNE_Code_Term__c</fullName>
    <label>S&amp;E Code (Term)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>