UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/SNE_DPI__c.field-meta.xml
<CustomField>
    <fullName>SNE_DPI__c</fullName>
    <formula>IF(
  SNE_Code_MRC__c == null, 
  SNE_Code_OTC__c,
  SNE_Code_MRC__c
)</formula>
    <label>S&amp;E DPI</label>
    <type>Text</type>
</CustomField>