UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Speed__c.field-meta.xml
<CustomField>
    <fullName>Speed__c</fullName>
    <description>This is used to store the attribute value selected for Speed.</description>
    <label>Speed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>