UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Speed_Mbps__c.field-meta.xml
<CustomField>
    <fullName>Speed_Mbps__c</fullName>
    <formula>IF (
	CONTAINS(Speed__c, &apos;Mbps&apos;),  
	VALUE(TRIM(LEFT(Speed__c, LEN(Speed__c) - 4))),
	IF(
		CONTAINS(Speed__c, &apos;Gbps&apos;),  
		VALUE(TRIM(LEFT(Speed__c, LEN(Speed__c) - 4))) * 1000,
		0
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Speed (Mbps)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>