UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Bound to Attribute = Term</description>
    <label>Term</label>
    <length>100</length>
    <type>Text</type>
</CustomField>