UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Months__c</fullName>
    <formula>IF(CONTAINS( Term__c, &quot;12 Months&quot;), 12, 
IF(CONTAINS( Term__c, &quot;24 Months&quot;), 24,
IF(CONTAINS( Term__c, &quot;36 Months&quot;), 36,
IF(CONTAINS( Term__c, &quot;60 Months&quot;), 60, NULL))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>