UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Type_of_Billing__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Billing__c</fullName>
    <formula>IF(
  SNE_Code_MRC__c != null,
  &apos;MRC&apos;,
  IF(
    SNE_Code_OTC__c != null,
    &apos;NRC&apos;,
    null
  )
)</formula>
    <label>Type of Billing</label>
    <type>Text</type>
</CustomField>