UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <formula>IF(
  SNE_Code_MRC__c != null,
  vlocity_cmt__RecurringCharge__c,
  IF(
    SNE_Code_OTC__c != null,
    vlocity_cmt__OneTimeCharge__c,
    null
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>