UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/vlocity_cmt__AssetId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AssetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For quotes of changes to existing Assets, this identifies the Asset that is being changed by this line item.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Quoted Changes</relationshipLabel>
    <relationshipName>QuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>