UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/vlocity_cmt__AssetReferenceId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AssetReferenceId__c</fullName>
    <description>Unique identifier of the asset refereced by this line item. Used by Vlocity CPQ to track the asset across various objects in the asset-based ordering lifecycle.</description>
    <label>Asset Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>