UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/vlocity_cmt__AttributeSelectedValues__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AttributeSelectedValues__c</fullName>
    <label>Attribute Selected Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>