UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/vlocity_cmt__ConnectDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ConnectDate__c</fullName>
    <label>Connect Date</label>
    <type>DateTime</type>
</CustomField>