UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/vlocity_cmt__CpqMessageData__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CpqMessageData__c</fullName>
    <label>Cpq Message Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>