UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/vlocity_cmt__DisconnectDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DisconnectDate__c</fullName>
    <label>Disconnect Date</label>
    <type>DateTime</type>
</CustomField>