UCF-APR2.4/ftr main/force-app/main/default/objects/QuoteLineItem/fields/vlocity_cmt__EffectiveOneTimeCostTotal__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__EffectiveOneTimeCostTotal__c</fullName>
    <label>Effective One Time Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>